// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Voucherify's screenEvent destination action: all fields 1`] = `
Object {
  "metadata": Object {
    "testType": "YC^Rfe*",
  },
  "name": "YC^Rfe*",
  "source_id": "YC^Rfe*",
  "type": "YC^Rfe*",
}
`;

exports[`Testing snapshot for Voucherify's screenEvent destination action: required fields 1`] = `
Object {
  "name": "YC^Rfe*",
  "source_id": "YC^Rfe*",
}
`;
